--- a/package.json
+++ b/package.json
@@ -18,14 +18,22 @@
   },
   "homepage": "https://github.com/SergeiKiss/frontend-project-11#readme",
   "devDependencies": {
+    "css-loader": "^6.8.1",
     "eslint": "^8.45.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
     "html-webpack-plugin": "^5.5.3",
+    "postcss-loader": "^7.3.3",
     "prettier": "^2.7.1",
+    "sass": "^1.64.1",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
     "workbox-webpack-plugin": "^7.0.0"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.0"
   }
 }
