--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,21 +1,11 @@
----
-root: true
-
-plugins:
-  - jest
-  - babel
-
 env:
-  node: true
-  jest: true
   browser: true
-
-parser: "@babel/eslint-parser"
-
-extends:
-  - "airbnb-base"
-  - "plugin:jest/recommended"
-
+  es2021: true
+  node: true
+extends: airbnb-base
+parserOptions:
+  ecmaVersion: latest
+  sourceType: module
 rules:
   no-console: 0
   import/extensions: 0
