--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "workbox-webpack-plugin": "^7.0.0"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "i18next": "^23.2.11",
     "on-change": "^4.0.2",
